.github/workflows/setup-lint-test.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,15 @@
 name: setup-and-test
 on: push
+env:
+  CI: true
+
 jobs:
  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
+
 
     steps:
       - uses: actions/checkout@v4
